# CommandGenerator

./: README.md  pyproject.toml
src/robocupathome_generator/: generator.py  llm.py
src/robocupathome_generator/ui/: gpsr_ui.py
